SAM*.tex: Avoid end-of-sentence spacing after i.e. and e.g. [minor]
The convention in SAM*.tex is to surround i.e. and e.g. with commas,
and IMHO that improves the flow in these instances. Fix nearby \tt
and em-dash formatting.

Also do this to "e.g." in comments so they don't trigger grep!

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -420,7 +420,7 @@ Each tag consists of \emph{start}, \emph{end}, \emph{strand},
 \emph{type} and zero or more \emph{key}{\tt =}\emph{value} pairs, each
 separated with semicolons. \emph{Start} and \emph{end} are 1-based
 positions between one and the sum of the {\tt M/I/D/P/S/=/X}
-{\sf CIGAR} operators, i.e. {\sf SEQ} length plus any pads.  Note
+{\sf CIGAR} operators, i.e., {\sf SEQ} length plus any pads.  Note
 any editing of the CIGAR string may require updating the {\tt PT}
 tag coordinates, or even invalidate them.
 As in GFF3, \emph{strand} is one of `{\tt +}' for forward strand tags,
