Add the missing VCF header length and header NULL termination in the BCF specification. Resolves #138

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1415,7 +1415,8 @@ A BCF2 header follows exactly the specification as VCF, with a few extensions/re
 
 The BCF2 header begins with the ``BCF2 magic'' 5 bytes that encode {\tt BCF\em XY} where {\em X} and {\em Y} are bytes indicating the major number (currently 2) and the minor number (currently 2).
 This magic can be used to quickly examine the file to determine that it's a BCF2 file.
-Immediately following the BCF2 magic is the standard VCF header lines in text format, beginning with \verb|##fileformat=VCFvX.Y|.
+Immediately following the BCF2 magic is an unsigned 4-byte integer containing the length of the header text which includes the NULL terminator character.
+Follow the standard NULL-terminated VCF header lines in text format, beginning with \verb|##fileformat=VCFvX.Y|.
 Because the type is encoded directly in the header, the recommended extension for BCF2 formatted files is {\sl .bcf}.
 BCF2 supports encoding values in a dictionary of strings.
 The string map is provided by the keyword \verb|##dictionary=S0,S1,...,SN| as a comma-separate ordered list of strings.
