--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1506,10 +1506,10 @@ l\_indiv  &	uint32\_t &	Data length of FORMAT and individual genotype fields \\ 
 CHROM	  & int32\_t  &	Given as an offset into the mandatory contig dictionary \\ \hline
 POS	      & int32\_t  &	0-based leftmost coordinate \\ \hline
 rlen      &	int32\_t  &	Length of the record as projected onto the reference sequence. Must be the length of the REF allele or the declared length of a symbolic allele respecting the END attribute \\ \hline
-n\_allele\_info	& int32\_t	& n\_info, where n\_allele is the number of REF+ALT alleles in this record, and n\_info is the number of VCF INFO fields present in this record \\ \hline
-n\_fmt\_sample	& uint32\_t	& n\_sample, where n\_fmt is the number of format fields for genotypes in this record, and n\_samples is the number of samples present in this sample.  Note that the number of samples must be equal to the number of samples in the header \\ \hline
 QUAL	  & float	  & Variant quality; 0x7F800001 for a missing value \\ \hline
-ID	      & typed string & Identifier; 0x07 for a missing value \\ \hline
+n\_allele\_info	& int32\_t	& The low 16 n\_allele bits represent the number of REF+ALT alleles in this record and the high 16 n\_info bits represent the number of VCF INFO fields in this record \\ \hline
+n\_fmt\_sample	& uint32\_t	& The low 24 n\_samples bits represent the number of samples in this record and the hight 8 n\_fmt bits represent the number of format fields for genotypes. Note that the number of samples must be equal to the number of samples in the header \\ \hline
+ID	      & typed string & Variant identifier; 0x07 for a missing value \\ \hline
 REF+ALT   & list of n\_allele typed strings & the first allele is REF (mandatory) followed by n\_alleles - 1 ALT alleles, all encoded as typed strings \\ \hline
 FILTER	  & Typed vector of integers	& a vector of integer offsets into dictionary, one for each FILTER field value.  ``.'' is encoded as MISSING \\ \hline
 INFO      & field key/value pairs	    & n\_info pairs of typed vectors	The first value must be a typed atomic integer giving the offset of the INFO field key into the dictionary.  The second value is a typed vector giving the value of the field \\ \hline
@@ -1594,6 +1594,7 @@ The final four bits encodes an unsigned integer that indicates the type of the u
 \vspace{0.3cm}
 \begin{tabular}{|l | l | l|} \hline
 Lowest 4 bits & Hexadecimal encoding & Corresponding atomic type \\ \hline
+0 & 0x00 & A missing value without an explicit type provided \\ \hline
 1 & 0x?1 & Integer [8 bit] \\ \hline
 2 & 0x?2 & Integer [16 bit] \\ \hline
 3 & 0x?3 & Integer [32 bit] \\ \hline
@@ -1603,7 +1604,7 @@ Lowest 4 bits & Hexadecimal encoding & Corresponding atomic type \\ \hline
 \vspace{0.3cm}
 
 Note this is not used in BCF2, but its type is reserved in case this becomes necessary.
-In BCF2 characters are simply represented by strings with a single element 0,4,6,8--15 reserved for future use.
+In BCF2 characters are simply represented by strings with a single element 4,6,8--15 reserved for future use.
 
 \vspace{0.3cm}
 
@@ -1795,10 +1796,6 @@ The final example is something seen on chrX when we have a haploid male and a di
 The male genotype vector is terminated prematurely by the END\_OF\_VECTOR value.
 \vspace{0.3cm}
 
-\textbf{Misc. notes}
-
-A type byte value of 0x00 is an allowed special case meaning MISSING but without an explicit type provided.
-
 
 \subsection{Encoding a VCF record example}
 
@@ -1883,12 +1880,12 @@ All of these can be encoded by 1-element INT8 values (0x11), with associated hex
 
 First is HM3.
 The entry begins with the key: 0x11 0x50.
-Next we have a Flag value to indicate the field is present, represented as a 1 element INT8 value of 1.
+The HM3 key has no value and therefore is represented as the special case of a missing value without an explicit type provided.
 Altogether we have:
 
 \vspace{0.3cm}
 \begin{tabular}{|l| l|} \hline
-0x11 0x50 0x11 0x01 & HM3 flag is present \\ \hline
+0x11 0x50 0x00 & HM3 flag is present \\ \hline
 \end{tabular}
 \vspace{0.3cm}
 
@@ -1978,7 +1975,7 @@ So the genotype block contains:
 
 We need to determine a few values before writing out the final block:
 
-l\_shared = 52 (Data length from CHROM to the end of INFO)
+l\_shared = 51 (Data length from CHROM to the end of INFO)
 
 l\_indiv = 42 (Data length of FORMAT and individual genotype fields)
 
@@ -1989,7 +1986,7 @@ n\_fmt\_samples = n\_fmt$<<24\mid$n\_sample = $5 << 24 \mid 3$ = 0x05000003
 
 \vspace{0.3cm}
 \begin{tabular}{|l| l|} \hline
-0x34000000 & l\_shared as little endian hex \\ \hline
+0x33000000 & l\_shared as little endian hex \\ \hline
 0x2A000000 & l\_indiv as little endian hex \\ \hline
 0x01000000 & CHROM offset is at 1 in 32 bit little endian \\ \hline
 0x64000000 & POS in 0 base 32 bit little endian \\ \hline
@@ -2001,7 +1998,7 @@ n\_fmt\_samples = n\_fmt$<<24\mid$n\_sample = $5 << 24 \mid 3$ = 0x05000003
 0x17 0x41 & REF A \\ \hline
 0x17 0x43 & ALT C \\ \hline
 0x11 0x00 & FILTER field PASS \\ \hline
-0x11 0x50 0x11 0x01 & HM3 flag is present \\ \hline
+0x11 0x50 0x00 & HM3 flag is present \\ \hline
 0x11 0x51 & AC key \\ \hline
 0x11 0x03 & with value of 3 \\ \hline
 0x11 0x52 & AN key \\ \hline
