Fix minor typo: alelle -> allele

--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -246,7 +246,7 @@ VCF records use a simple haplotype representation for REF and ALT alleles to des
 
 
 \section{INFO keys used for structural variants}
-When the INFO keys reserved for encoding structural variants are used for imprecise variants, the values should be best estimates. When a key reflects a property of a single alt allele (e.g.\ SVLEN), then when there are multiple alt alleles there will be multiple values for the key corresponding to each alelle (e.g.\ SVLEN=-100,-110 for a deletion with two distinct alt alleles).
+When the INFO keys reserved for encoding structural variants are used for imprecise variants, the values should be best estimates. When a key reflects a property of a single alt allele (e.g.\ SVLEN), then when there are multiple alt alleles there will be multiple values for the key corresponding to each allele (e.g.\ SVLEN=-100,-110 for a deletion with two distinct alt alleles).
 
 The following INFO keys are reserved for encoding structural variants.
 \footnotesize
