Wording improvements to footnote [minor]

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -169,9 +169,10 @@ r001  147 ref 37 30 9M         =  7 -39 CAGCGGCAT         * NM:i:1
 
 \end{description}
 
-\footnotetext{A chimeric alignment is primarily caused by structural
-variations, gene fusions, misassemblies, RNA-seq or experimental protocols. It is more frequent given longer
-reads. For a chimeric alignment, the linear alignments consisting of the alignment are largely
+\footnotetext{Chimeric alignments are primarily caused by structural
+variations, gene fusions, misassemblies, RNA-seq or experimental protocols.
+They are more frequent given longer reads.
+For a chimeric alignment, the linear alignments constituting the alignment are largely
 non-overlapping; each linear alignment may have high mapping quality and is
 informative in SNP/INDEL calling. In contrast, multiple mappings are caused primarily by repeats.  They are less frequent
 given longer reads. If a read has multiple mappings, all these mappings are
