--- a/BCFv2_qref.tex
+++ b/BCFv2_qref.tex
@@ -81,7 +81,7 @@ A BCF2 file is BGZF compressed and all multi-byte value are little endian.
   & & {\sf info\_key} & Info key, defined in the dictionary & {\tt typed int} & \\\cline{3-6}
   & & {\sf info\_value} & Value & {\tt typed val} &\\\cline{2-6}
   & \multicolumn{5}{c|}{\textcolor{gray}{\it List of FORMATs and sample information (n=n\_fmt)}} \\\cline{3-6}
-  & & {\sf fmt\_key} & Format key, defined in the dectionary & {\tt typed int} & \\\cline{3-6}
+  & & {\sf fmt\_key} & Format key, defined in the dictionary & {\tt typed int} & \\\cline{3-6}
   & & {\sf fmt\_type} & Typing byte of each individual value, possibly followed by a typed int for the vector length & {\tt uint8\_t+} & \\\cline{3-6}
   & & {\sf fmt\_value} & Array of values. The information of each individual is concatenated in the vector. Every value is of the same {\sf fmt\_type}.
     Variable-length vectors are padded with missing values; a string is stored as a vector of {\tt char}. & (by {\sf fmt\_type}) &\\
