Update VCFv4.*.tex as in fdd7be33095b

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1893,7 +1893,7 @@ All of these can be encoded by 1-element INT8 values (0x11), with associated hex
 
 First is HM3.
 The entry begins with the key: 0x11 0x50.
-The HM3 key has no value and therefore is represented as the special case of a missing value without an explicit type provided.
+The HM3 key is a flag with no associated value and therefore is represented as the special case of a missing value without an explicit type provided.
 Altogether we have:
 
 \vspace{0.3cm}
