--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -1374,7 +1374,7 @@ HM3;AC=3;AN=6;AA=C
 Let's assume that the header dictionary elements for HM3, AC, AN, and AA are at 80, 81, 82, and 83 respectively.  All of these can be encoded by 1-element INT8 values (0x11), with associated hex values of 0x50, 0x51, 0x52, and 0x53 respectively.
 
 First is HM3.  The entry begins with the key: 0x11 0x50.
-The HM3 key has no value and therefore is represented as the special case of a missing value without an explicit type provided.
+The HM3 is a flag with no associated value and therefore is represented as the special case of a missing value without an explicit type provided.
 Altogether we have:
 
 \vspace{0.3cm}
