Spelling and typo fixes [minor]
Hat tip @r6eve for the CSIv1.tex ones.

test using --only-changes (need a gs upgrade as well)

 also add change in a longtable

 also add change in a longtable

 also add change in OKAY

try this

--- a/CSIv1.tex
+++ b/CSIv1.tex
@@ -20,8 +20,8 @@
   \multicolumn{4}{|l|}{\sf magic} & Magic string & {\tt char[4]} & {\tt CSI\char92 1}\\\cline{1-7}
   \multicolumn{4}{|l|}{\sf min\_shift} & \# bits for the minimal interval & {\tt int32\_t} & [14]\\\cline{1-7}
   \multicolumn{4}{|l|}{\sf depth} & Depth of the binning index & {\tt int32\_t} & [5]\\\cline{1-7}
-  \multicolumn{4}{|l|}{\sf l\_aux} & Length of auxilary data & {\tt int32\_t} & [0]\\\cline{1-7}
-  \multicolumn{4}{|l|}{\sf aux} & Auxilary data & {\tt uint8\_t[l\_aux]} & \\\cline{1-7}
+  \multicolumn{4}{|l|}{\sf l\_aux} & Length of auxiliary data & {\tt int32\_t} & [0]\\\cline{1-7}
+  \multicolumn{4}{|l|}{\sf aux} & Auxiliary data & {\tt uint8\_t[l\_aux]} & \\\cline{1-7}
   \multicolumn{4}{|l|}{\sf n\_ref} & \# reference sequences & {\tt int32\_t} & \\\cline{1-7}
   \multicolumn{7}{|c|}{\textcolor{gray}{\it List of indices (n=n\_ref)}} \\\cline{2-7}
   & \multicolumn{3}{l|}{\sf n\_bin} & \# distinct bins & {\tt int32\_t} & \\\cline{2-7}
