--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -117,8 +117,8 @@ or
   {\tt U2} & Z & Phred probability of the 2nd call being wrong conditional on the best being wrong \\
   {\tt UQ} & i & Phred likelihood of the segment, conditional on the mapping being correct \\
   {\tt X?} & ? & Reserved for end users \\
-  {\tt Y?} & ? & Reserved for end users \\
-  {\tt Z?} & ? & Reserved for end users \\
+  {\tt Y?} & ? & Reserved for me \\
+  {\tt Z?} & ? & Reserved for me \\
   \hline
 \end{longtable}
 \end{center}
@@ -229,7 +229,7 @@ Template-independent mapping quality, i.e., the mapping quality if the read were
 The number of segments in the template.
 
 \item[U2:Z:\tagvalue{}]
-Phred probility of the 2nd call being wrong conditional on the best being wrong.
+Phred probability of the 2nd call being wrong conditional on the best being wrong.
 The same encoding and length as {\sf QUAL}.  See also {\tt E2} for associated base calls.
 
 \item[UQ:i:\tagvalue{}]
