Spelling and typo fixes [minor]
Hat tip @r6eve for the CSIv1.tex ones.

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -229,7 +229,7 @@ Template-independent mapping quality, i.e., the mapping quality if the read were
 The number of segments in the template.
 
 \item[U2:Z:\tagvalue{}]
-Phred probility of the 2nd call being wrong conditional on the best being wrong.
+Phred probability of the 2nd call being wrong conditional on the best being wrong.
 The same encoding and length as {\sf QUAL}.  See also {\tt E2} for associated base calls.
 
 \item[UQ:i:\tagvalue{}]
