--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -242,8 +242,9 @@ It is possible to define sample to genome mappings as shown below:
 
 In the \verb!SAMPLE! line:
 \begin{itemize}
-\item{ID} is a string that identifies the sample. It comprises non-whitespace characters and doesn't include the comma (',') character.
-\item{FILTER} is a string that has been defined in a \verb!##FILTER\verb! line, except for PASS or '.' which mean that the sample passes or that the filter is missing (respectively). 
+\item{ID} is a string that identifies the sample. 
+It comprises non-whitespace characters and doesn't include the comma (`.') character.
+\item{FILTER} is a string that has been defined in a \verb!##FILTER! line, except for PASS or `.' which mean that the sample passes or that the filter is missing (respectively). 
 \end{itemize}
 
 \subsubsection{Pedigree field format}
