--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -144,8 +144,8 @@ It is possible to define sample to genome mappings as shown below:
 ##SAMPLE=<ID=S_ID,FILTER=PASS,Genomes=G1_ID;G2_ID; ...;GK_ID,Mixture=N1;N2; ...;NK,Description=S1;S2; ...;SK>
 \end{verbatim}
 \normalsize
-ID is a string that identifies the sample. It comprises of non-whitespace characters and doesn't include the comma (',') character.
-FILTER is a string that has been defined in a \verb!##FILTER\verb! line, except for PASS or '.' which mean that the sample passes or that the filter is missing (respectively). 
+ID is a string that identifies the sample. It comprises of non-whitespace characters and doesn't include the comma (`,') character.
+FILTER is a string that has been defined in a \verb!##FILTER! line, except for PASS or `.' which mean that the sample passes or that the filter is missing (respectively). 
 
 \subsubsection{Pedigree field format}
 It is possible to record relationships between genomes using the following syntax:
